<resources>
    <string name="app_name">SVCE Attendance Prototype</string>
    <string name="login_screen">Login Screen</string>
    <string name="login_as">Login as: %1$s</string>
    <string name="college_email">College Email</string>
    <string name="password">Password</string>
    <string name="roll_number">Roll Number</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up / Create a new account</string>
    <string name="signup_screen">Signup Screen</string>
    <string name="signup">Sign Up</string>
    <string name="signup_as">Sign up as: %1$s</string>

    <string name="home_as">Home as: %1$s</string>
    <string name="profile">Profile</string>
    <string name="home_screen">Home</string>

    <string name="finalizing_in_seconds">Finalizing in %1$d seconds...</string>
    <string name="broadcast_countdown">Broadcasting confirmation: %1$d</string>
    <string name="present_count">Present: %1$d</string>
    <string name="logout">Logout</string>
    <string name="advertising_code">Advertising code: %d</string>
    <string name="grace_remaining">Grace period: %1$d s left</string>
    <string name="status_no_scanning">No active scanning sessions</string>
    <string name="status_scanning_active">Scanning access active: %1$d:%2$02d remaining</string>
    <string name="enter_ble_prompt">Enter your BLE code:</string>
    <string name="ble_hint">e.g. 1234</string>
    <string name="save_code">Save Code</string>
    <string name="attendance_as">Attendance as: %1$s</string>
    <string name="status_not_broadcasting">Not broadcasting</string>
    <string name="take_attendance">Start Attendance</string>
    <string name="stop_attendance">Stop Attendance</string>
    <string name="helper_list_label">Selected helpers: %1$d</string>
    <string name="start_group_scanning">Start Group Scanning</string>
    <string name="roll_count_visible">%1$d roll numbers visible</string>
    <string name="helper_scan_timer">Helper Scan (%1$d:%2$02d)</string>



</resources>




